# btc-staking-icp

./: README.md
btc_staking_pool/: Cargo.toml  README.md  dfx.json
btc_staking_pool/src/btc_staking_pool_backend/: Cargo.toml
btc_staking_pool/src/btc_staking_pool_backend/src/: errors.rs  lib.rs  state.rs  types.rs
